--- a/docs/package.json
+++ b/docs/package.json
@@ -3,9 +3,9 @@
   "private": true,
   "version": "2.1.0",
   "scripts": {
-    "docs:dev": "vitepress dev . --host",
-    "docs:build": "vitepress build .",
-    "docs:serve": "vitepress serve ."
+    "dev": "vitepress dev . --host",
+    "build": "vitepress build .",
+    "serve": "vitepress serve ."
   },
   "dependencies": {
     "vue": "^3.2.45",
@@ -18,6 +18,9 @@
     "vitepress-theme-demoblock": "2.0.0",
     "element-plus": "^2.2.22",
     "esbuild-register": "^3.4.1",
-    "@element-plus/icons-vue": "^2.0.10"
+    "@element-plus/icons-vue": "^2.0.10",
+    "@ant-design/icons-vue": "^6.1.0",
+    "tdesign-icons-vue-next": "^0.1.5",
+    "@arco-design/web-vue": "^2.39.2"
   }
 }
