--- a/package.json
+++ b/package.json
@@ -43,6 +43,9 @@
     "clean:lib": "rimraf lib",
     "update:version": "tsx scripts/update-version.ts",
     "publish": "npm publish ./lib --tag beta",
+    "docs:dev": "pnpm run -C docs dev",
+    "docs:build": "pnpm run -C docs build",
+    "docs:serve": "pnpm run -C docs serve",
     "eslint": "eslint \"packages/**/{*.vue,*.js,*.ts,*.jsx,*.tsx}\"",
     "eslint:fix": "eslint --fix \"packages/**/{*.vue,*.js,*.ts,*.jsx,*.tsx}\"",
     "stylelint": "stylelint \"packages/**/{*.scss,*.css}\"",
@@ -59,47 +62,50 @@
     "vue": "^3.2.45"
   },
   "devDependencies": {
-    "eslint": "^8.28.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-vue": "^9.7.0",
-    "stylelint": "^14.15.0",
-    "stylelint-config-recommended-scss": "^8.0.0",
-    "stylelint-config-standard": "^29.0.0",
-    "stylelint-scss": "^4.3.0",
-    "lint-staged": "^13.0.3",
+    "@ant-design/icons-vue": "^6.1.0",
     "@babel/parser": "^7.20.3",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-typescript": "^7.18.6",
     "@babel/traverse": "^7.20.1",
+    "@element-plus/icons-vue": "^2.0.10",
+    "@arco-design/web-vue": "^2.39.2",
     "@rollup/pluginutils": "^5.0.2",
+    "@types/chalk": "^2.2.0",
+    "@types/commander": "^2.12.2",
     "@types/debounce": "^1.2.1",
+    "@types/fs-extra": "^9.0.13",
+    "@types/lodash": "^4.14.189",
+    "@types/lodash-es": "^4.17.6",
     "@types/node": "^18.11.9",
+    "@types/shelljs": "^0.8.11",
     "@typescript-eslint/eslint-plugin": "^5.44.0",
     "@typescript-eslint/parser": "^5.44.0",
     "@vitejs/plugin-vue": "^3.2.0",
     "@vue/compiler-sfc": "^3.2.45",
-    "rimraf": "^3.0.2",
-    "sass": "^1.56.1",
-    "typescript": "^4.9.3",
-    "vite": "^3.2.4",
-    "vue": "^3.2.45",
-    "vue-tsc": "^1.0.9",
-    "tsx": "^3.6.0",
     "chalk": "^4.1.2",
-    "@types/chalk": "^2.2.0",
-    "@types/commander": "^2.12.2",
     "commander": "^9.4.1",
-    "@types/fs-extra": "^9.0.13",
+    "eslint": "^8.28.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-vue": "^9.7.0",
     "fs-extra": "^10.1.0",
-    "vite-plugin-dts": "^1.7.1",
-    "@types/lodash": "^4.14.189",
-    "@types/lodash-es": "^4.17.6",
+    "lint-staged": "^13.0.3",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "lodash-unified": "^1.0.3",
+    "rimraf": "^3.0.2",
+    "sass": "^1.56.1",
     "shelljs": "^0.8.5",
-    "@element-plus/icons-vue": "^2.0.10",
-    "@types/shelljs": "^0.8.11"
+    "stylelint": "^14.15.0",
+    "stylelint-config-recommended-scss": "^8.0.0",
+    "stylelint-config-standard": "^29.0.0",
+    "stylelint-scss": "^4.3.0",
+    "tdesign-icons-vue-next": "^0.1.5",
+    "tsx": "^3.6.0",
+    "typescript": "^4.9.3",
+    "vite": "^3.2.4",
+    "vite-plugin-dts": "^1.7.1",
+    "vue": "^3.2.45",
+    "vue-tsc": "^1.0.9"
   },
   "lint-staged": {
     "packages/**/{*.vue,*.js,*.ts,*.jsx,*.tsx}": "eslint --fix",
