--- a/docs/package.json
+++ b/docs/package.json
@@ -18,7 +18,7 @@
     "tdesign-icons-vue-next": "^0.2.2",
     "vue": "^3.4.15",
     "vitepress-theme-demoblock": "3.0.3",
-    "e-icon-picker": "workspace:./lib",
+    "e-icon-picker": "workspace:*",
     "@iconify/iconify": "^3.1.1",
     "@iconify/json": "^2.2.177",
     "@purge-icons/generated": "^0.10.0"
