--- a/package.json
+++ b/package.json
@@ -42,10 +42,10 @@
     "components/*/*"
   ],
   "scripts": {
-    "build:lib": "pnpm clean:lib && pnpm build:components && pnpm build:icon && pnpm release",
+    "build:lib": "pnpm clean:lib && pnpm build:components && pnpm release",
     "build:components": "tsx scripts/build.ts",
     "build:icon": "pnpm clean:icon && tsx scripts/build-icon.ts",
-    "clean:icon": "cd ./scripts/icon && rimraf ./antd ./arco ./ele ./fontawesome ./layui-vue ./tdesign ./iconify",
+    "clean:icon": "cd ./packages/icon && rimraf ./antd ./arco ./ele ./fontawesome ./layui-vue ./tdesign ./iconify",
     "release": "tsx scripts/release.ts",
     "clean:lib": "rimraf lib",
     "update:version": "tsx scripts/update-version.ts",
@@ -68,7 +68,7 @@
     "debounce": "^2.0.0",
     "vue": "^3.4.15",
     "@iconify/vue": "^4.1.1",
-    "e-icon-picker": "workspace:./lib"
+    "e-icon-picker": "workspace:*"
   },
   "devDependencies": {
     "@layui/icons-vue": "^1.1.0",
