--- a/package.json
+++ b/package.json
@@ -63,17 +63,16 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
-    "@vue/shared": "^3.4.15",
     "@vueuse/core": "^10.7.2",
-    "debounce": "^2.0.0",
-    "vue": "^3.4.15",
-    "@iconify/vue": "^4.1.1",
-    "e-icon-picker": "workspace:*"
+    "vue": "^3.4.19",
+    "lodash-es": "^4.17.21"
   },
   "devDependencies": {
-    "@layui/icons-vue": "^1.1.0",
+    "@iconify/vue": "^4.1.1",
+    "e-icon-picker": "workspace:*",
+    "@layui/icons-vue": "^1.1.1",
     "@ant-design/icons-vue": "^7.0.1",
-    "@arco-design/web-vue": "^2.54.3",
+    "@arco-design/web-vue": "^2.54.4",
     "@babel/parser": "^7.23.9",
     "@babel/preset-env": "^7.23.9",
     "@babel/preset-typescript": "^7.23.3",
@@ -82,39 +81,34 @@
     "@rollup/pluginutils": "^5.1.0",
     "@types/chalk": "^2.2.0",
     "@types/commander": "^2.12.2",
-    "@types/debounce": "^1.2.4",
     "@types/fs-extra": "^11.0.4",
-    "@types/lodash": "^4.14.202",
     "@types/lodash-es": "^4.17.12",
-    "@types/node": "^20.11.7",
+    "@types/node": "^20.11.19",
     "@types/shelljs": "^0.8.15",
-    "@typescript-eslint/eslint-plugin": "^6.19.1",
-    "@typescript-eslint/parser": "^6.19.1",
-    "@vitejs/plugin-vue": "^5.0.3",
+    "@typescript-eslint/eslint-plugin": "^7.0.1",
+    "@typescript-eslint/parser": "^7.0.1",
+    "@vitejs/plugin-vue": "^5.0.4",
     "chalk": "^5.3.0",
-    "commander": "^11.1.0",
+    "commander": "^12.0.0",
     "eslint": "^8.56.0",
     "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-vue": "^9.20.1",
+    "eslint-plugin-vue": "^9.21.1",
     "fs-extra": "^11.2.0",
-    "lint-staged": "^15.2.0",
-    "lodash": "^4.17.21",
-    "lodash-es": "^4.17.21",
-    "lodash-unified": "^1.0.3",
+    "lint-staged": "^15.2.2",
     "rimraf": "^5.0.5",
-    "sass": "^1.70.0",
+    "sass": "^1.71.0",
     "shelljs": "^0.8.5",
-    "stylelint": "^16.2.0",
+    "stylelint": "^16.2.1",
     "stylelint-config-recommended-scss": "^14.0.0",
     "stylelint-config-standard": "^36.0.0",
     "stylelint-scss": "^6.1.0",
     "tdesign-icons-vue-next": "^0.2.2",
-    "tsx": "^4.7.0",
+    "tsx": "^4.7.1",
     "typescript": "^5.3.3",
-    "vite": "^5.0.12",
+    "vite": "^5.1.3",
     "vite-plugin-dts": "^3.7.2",
     "vue-tsc": "^1.8.27",
-    "@iconify/json": "^2.2.177"
+    "@iconify/json": "^2.2.183"
   },
   "lint-staged": {
     "packages/**/{*.vue,*.ts}": "eslint --fix",
